Style fix to pagination on Mobile

--- a/dts/source/scss/components/_pagination.scss
+++ b/dts/source/scss/components/_pagination.scss
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   gap: $dts-spacing-8;
-  flex-wrap: wrap;
   margin: $dts-spacing-12 0 0;
   @extend .dts-body-text-small;
 
@@ -13,13 +12,13 @@
 
   ul {
     display: flex;
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     flex-wrap: wrap;
 
     // margin-bottom: $dts-spacing-16;
     @include devicebreak(small) {
-      justify-content: right;
+      justify-content: end;
     }
   }
 
